--- a/notes-app-backend/package.json
+++ b/notes-app-backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "eslint": "^9.29.0",
+    "eslint-config-dicodingacademy": "^0.9.4",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10"
   }
